--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>eid mubarak from nasir</h1>
+    <h1>eid mubarak from nasirkhan </h1>
 </body>
 </html>
