--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>eid mubarak from nasirkhan </h1>
+   
+    <h1> coming eid mubarak from nasir khan </h1>
 </body>
 </html>
