--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   
-    <h1> coming eid mubarak from nasir khan </h1>
+    <img src="./images/pp.jpeg" alt="nasir pic">
+    <h1>comming  eid mubarak from nasir khan </h1>
 </body>
 </html>
