--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <img src="./images/pp.jpeg" alt="nasir pic">
-    <h1>comming  eid mubarak from nasir khan </h1>
+    <h1>comming bakra eid mubarak from nasir khan </h1>
 </body>
 </html>
