--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <img src="./images/pp.jpeg" alt="nasir pic">
-    <h1>comming bakra eid mubarak from nasir khan </h1>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<img src="./images/pp.jpeg" alt="nasir pic" />
+		<h1>Hello world from nasir</h1>
+	</body>
 </html>
